--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "title": "WebBluetooth Car UI",
+  "title": "WebBluetooth Light Bulb",
   "short": "SPG",
-  "description": "A web-based UI for the WebBluetoothCar",
+  "description": "A web-based UI for the Playbulb sphere",
   "color": "#00796B",
   "colorbkg": "#ffffff"
 }
